# RoadVLM

./: .gitignore  README.md  pyproject.toml
examples/: basic_prediction.py
scripts/: setup_environment.sh
src/core/: model.py  scene_analyzer.py
src/preprocessing/: image_processor.py
src/utils/: data_types.py  prompts.py
